force-app/main/default/objects/CPQ_Country_to_Region_Mapping__mdt/CPQ_Country_to_Region_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CPQ Country to Region Mapping</label>
    <pluralLabel>CPQ Country to Region Mappings</pluralLabel>
</CustomObject>