force-app/main/default/objects/CPQ_Country_to_Region_Mapping__mdt/fields/Contact_Center__c.field-meta.xml
<CustomField>
    <fullName>Contact_Center__c</fullName>
    <description>Lists the CS call center that supports the customer</description>
    <inlineHelpText>Lists the CS call center that supports the customer</inlineHelpText>
    <label>Contact Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dallas</fullName>
                <default>true</default>
                <label>Dallas</label>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>