force-app/main/default/objects/CPQ_Country_to_Region_Mapping__mdt/fields/ISN_Tax_Subsidiary_Name__c.field-meta.xml
<CustomField>
    <fullName>ISN_Tax_Subsidiary_Name__c</fullName>
    <label>ISN Tax Subsidiary Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>