force-app/main/default/objects/CPQ_Country_to_Region_Mapping__mdt/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>