force-app/main/default/objects/CPQ_Country_to_Region_Mapping__mdt/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <label>Price List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>